# prompt-driven-orchestrator

./: .gitattributes  .gitignore  CONTEXT.md  Cargo.toml  Makefile  README.md  install.sh  maestro-session-audit.html  package-lock.json  package.json  skills-lock.json
.claude/workflows/: sandcastle-tdd.js  simple-bugfix.js
.github/workflows/: ci.yml  release.yml
.maestro/pipelines/: my-pipe.yaml  plan-implement-loop.yaml  review-loop.yaml  test.yaml
.maestro/prompts/: 9LvO3oid-iter-1.md  9NOnrpKY-iter-1.md  KHFCO0US-iter-1.md  implementer.md  mWllKR47-iter-1.md  reviewer.md
.pdo/pipelines/: planner.yaml  review-loop.yaml  simple-bugfix.yaml
.playwright-mcp/: page-2026-05-08T06-50-10-420Z.yml  page-2026-05-08T06-50-25-052Z.yml  page-2026-05-08T06-50-37-771Z.yml  page-2026-05-08T06-51-19-584Z.yml  page-2026-05-08T06-51-31-828Z.yml  page-2026-05-08T06-51-51-239Z.yml  page-2026-05-08T07-10-13-705Z.yml  page-2026-05-08T07-10-53-953Z.yml  page-2026-05-08T07-12-26-866Z.yml  page-2026-05-08T07-13-58-608Z.yml  page-2026-05-08T07-16-55-720Z.yml  page-2026-05-08T07-17-44-503Z.yml  page-2026-05-08T07-18-25-426Z.yml  page-2026-05-08T07-18-51-470Z.yml  page-2026-05-08T07-19-05-452Z.yml  page-2026-05-08T07-20-28-010Z.yml  page-2026-05-08T07-20-47-346Z.yml  page-2026-05-10T11-56-13-781Z.yml  page-2026-05-11T07-34-16-383Z.yml  page-2026-05-11T07-34-52-289Z.yml  page-2026-05-11T07-36-28-647Z.yml  page-2026-05-11T07-36-48-712Z.yml  page-2026-05-11T07-38-57-942Z.yml  page-2026-05-11T07-55-17-204Z.yml  page-2026-05-11T07-55-27-011Z.yml  page-2026-05-11T07-56-14-479Z.yml  page-2026-05-11T08-52-57-965Z.yml  page-2026-05-11T08-53-54-754Z.yml  page-2026-05-11T14-32-04-893Z.yml  page-2026-05-11T14-32-15-130Z.yml  page-2026-05-11T14-32-25-389Z.yml  page-2026-05-11T15-09-11-290Z.yml  page-2026-05-11T15-09-30-528Z.yml  page-2026-05-11T15-10-20-930Z.yml  page-2026-05-11T15-10-58-644Z.yml  page-2026-05-11T15-11-48-764Z.yml  page-2026-05-12T14-26-08-908Z.yml  page-2026-05-12T14-29-01-312Z.yml  page-2026-05-12T14-31-52-040Z.yml
.sandcastle/: CODING_STANDARDS.md
crates/maestro-cli/: Cargo.toml
crates/maestro-cli/src/: main.rs
crates/maestro-daemon/: Cargo.toml
crates/maestro-daemon/src/: admission.rs  blackboard.rs  condition.rs  edge_router.rs  event_log.rs  fire_decision.rs  graph_resolver.rs  guard_runner.rs  lib.rs  library_store.rs  loop_body_resolver.rs  loop_region.rs  main.rs  merge_action.rs  mutation_validator.rs  node_io_resolver.rs  node_primitives.rs  outputs_validator.rs  pipeline.rs  pipeline_migrator.rs  pipeline_watcher.rs  prompt_augmenter.rs  pty_bridge.rs  scheduler.rs  scheduler_dispatcher.rs  stale_detector.rs  switch_router.rs  tmux_session_manager.rs  transition_guard.rs  trigger_scheduler.rs  trigger_store.rs
crates/maestro-daemon/tests/: admission_concurrency.rs  cli_complete_does_not_panic.rs  edit_self_write_loop.rs  frontmatter_validation.rs  log_level_default.rs  manager_pty.rs  mid_run_edits.rs  multi_iter.rs  mutation_policy.rs  node_io.rs  node_prompt.rs  process_lifecycle.rs  pty_bridge.rs  recent_repos.rs  run_scoped_pipeline.rs  serializer_round_trip.rs  session_cap_admission.rs  smoke_daemon.rs  start_node.rs  sub_worktree_survive.rs  switch_when_validation.rs  tmux_lifecycle.rs  tmux_run_spawn.rs  trigger_scheduler.rs
crates/maestro-daemon/tests/common/: mod.rs
crates/pdo-daemon/: Cargo.toml  build.rs
crates/pdo-daemon/assets/sandbox/: Dockerfile
crates/pdo-daemon/src/: admission.rs  blackboard.rs  boot_recovery.rs  condition.rs  cron_schedule.rs  event_log.rs  fire_decision.rs  frontmatter_parser.rs  graph_resolver.rs  guard_runner.rs  input_resolution.rs  instance_config.rs  lib.rs  library_store.rs  loop_region.rs  main.rs  mutation_validator.rs  node_io_resolver.rs  node_primitives.rs  node_spawn.rs  outputs_validator.rs  pipeline.rs  pipeline_migrator.rs  pipeline_watcher.rs  prompt_augmenter.rs  pty_bridge.rs  run_advance.rs  run_cost.rs  sandbox_container.rs  sandbox_image.rs  sandbox_run.rs  sandbox_staging.rs  scheduler.rs  scheduler_dispatcher.rs  scheduler_interpreter.rs  service_unit.rs  stale_detector.rs  stats.rs  switch_router.rs  tmux_session_manager.rs  (+6 more)
crates/pdo-daemon/tests/: admission_concurrency.rs  cli_complete_does_not_panic.rs  edit_self_write_loop.rs  frontmatter_validation.rs  guard_dry_run.rs  guard_dry_run_timeout.rs  hot_reload_conflict.rs  library_node_ports.rs  log_level_default.rs  loop_command_truth.rs  manager_pty.rs  mid_run_edits.rs  multi_iter.rs  multi_repo_run.rs  mutation_policy.rs  node_done_detach.rs  node_io.rs  node_prompt.rs  notes_round_trip.rs  process_lifecycle.rs  pty_bridge.rs  recent_repos.rs  repos_browse.rs  run_diff_range.rs  run_naming.rs  run_scoped_pipeline.rs  run_shell.rs  runs_list_target_repo.rs  sandbox_tracer.rs  script_node.rs  serializer_round_trip.rs  session_cap_admission.rs  smoke_daemon.rs  spawn_abort_recovery.rs  stale_mtime_detection.rs  start_node.rs  sub_worktree_survive.rs  switch_when_validation.rs  tmux_lifecycle.rs  tmux_run_spawn.rs  (+1 more)
crates/pdo-daemon/tests/common/: mod.rs
design-prompts/: maestro-unified-mode-inline-terminal.md
docs/: design-brief.md
docs/adr/: 0001-sharp-tool-not-safe-tool.md  0002-mechanical-conditionals-only.md  0003-stack-rust-react-xyflow.md  0004-testing-strategy.md  0005-inline-xterm-over-os-spawn.md  0006-merge-as-first-class-node.md  0007-edit-during-run.md  0008-mechanical-nodes-require-typed-upstream.md  0009-three-layer-runtime-primitives.md  0010-port-output-as-directory.md  0011-conditional-edges-and-loop-regions.md  0012-triggers-and-trust-earned-autonomy.md  0013-client-side-mermaid-rendering.md  0014-canvas-undo-snapshot-cow.md  0015-instance-config-store-and-precedence.md  0016-workflow-import-parse-mechanism.md  0017-script-node.md  0018-canvas-note-model.md  0019-persistent-daemon-service-unit.md  0020-archive-preserves-outputs.md  0021-run-shell-open-session.md  0028-html-output-port.md  (+8 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  probe-start.mjs  probe.mjs  vite.config.ts
tests/: smoke.sh
(+345 files in other folders)
