[workspace]
resolver = "2"
members = ["crates/maestro-daemon", "crates/maestro-cli"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
