[package]
name = "maestro-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "blocking"] }
