[package]
name = "maestro-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "maestro-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
pretty_assertions.workspace = true
insta.workspace = true
tempfile.workspace = true
