[package]
name = "pdo-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "pdo_daemon"
path = "src/lib.rs"

[[bin]]
name = "pdo"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml.workspace = true
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxc_ast.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
portable-pty.workspace = true
futures-util = "0.3"
libc = "0.2"
sha2.workspace = true
# TLS via rustls (pure-Rust, `ring`) instead of the default native-tls/OpenSSL:
# openssl-sys can't cross-compile to aarch64-unknown-linux-gnu in the release
# build (no target OpenSSL). rustls removes the C dependency entirely.
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "system-proxy", "rustls-tls", "json", "blocking"] }

[dev-dependencies]
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
pretty_assertions.workspace = true
insta.workspace = true
tempfile.workspace = true
filetime = "0.2"
chrono-tz = "0.10"
